# rtvc-gcloud

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  const.py  main.py  models.py  render.py  requirements.txt  test_vocoder.base64  util_decode_base64.py  util_encode_base64.py
config/: hparams.py
docker/compile.img/: Dockerfile  cloudbuild.yaml
docker/runtime.img/: Dockerfile  cloudbuild.yaml
encoder/: audio.py  hparams.py  inference.py  main.py  model.py  requirements.txt
synthesizer/: audio.py  hparams.py  inference.py
synthesizer/models/: base.py  forward_tacotron.py  tacotron.py
synthesizer/utils/: cleaners.py  duration_extractor.py  symbols.py  text.py
util/: funcs.py  setup_util.bat  setup_util.sh  util_demo.py  util_requirements.txt
vocoder/: audio.py  base.py  distribution.py  hparams.py  inference.py  vocoder_convert_model.py
vocoder/libwavernn/: build.sh  convert.py  inference.py
vocoder/libwavernn/WaveRNNVocoder/: setup.py
vocoder/libwavernn/fatchord_version/src/: WaveRNNVocoder.cpp  cxxopts.hpp  net_impl.cpp  net_impl.h  wavernn.cpp  wavernn.h
vocoder/libwavernn/geneing_version/src/: CMakeLists.txt  net_impl.cpp  net_impl.h  vocoder.cpp  wavernn.cpp  wavernn.h
vocoder/libwavernn/runtimeracer_version/src/: CMakeLists.txt  WaveRNNVocoder.cpp  vocoder.cpp  vocoder.h  wavernn.cpp  wavernn.h
vocoder/models/: base.py  fatchord_version.py  geneing_version.py  runtimeracer_version.py
vocoder/parallel_wavegan/: README.md
vocoder/parallel_wavegan/layers/: pqmf.py  residual_block.py  residual_stack.py  upsample.py
vocoder/parallel_wavegan/models/: __init__.py  melgan.py
vocoder/wavernn/libwavernn/: convert.py  inference.py
vocoder/wavernn/libwavernn/fatchord_version/src/: net_impl.cpp
vocoder/wavernn/libwavernn/runtimeracer_version/src/: net_impl.cpp  net_impl.h
vocoder/wavernn/models/: fatchord_version.py  geneing_version.py  runtimeracer_version.py
voicefixer/: base.py
voicefixer/restorer/: model.py
voicefixer/tools/: mel_scale.py
voicefixer/vocoder/: base.py
voicefixer/vocoder/model/: modules.py
